...
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textEndPadding="6dp"
                        app:textStartPadding="6dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/day2"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:insetTop="0dp"
...
                    android:text="@string/accessible_car"
                    app:checkedIcon="@drawable/accessible_forward_fill"
                    app:chipIcon="@drawable/accessible_forward_fill"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_motorcycle"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motorcycle"
                    app:checkedIcon="@drawable/motorcycle_fill"
                    app:chipIcon="@drawable/motorcycle_fill"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|top"
                    android:indeterminate="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.Material3.BottomAppBar">

        <Button
            android:id="@+id/button_reservar_continue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:text="@string/continue_label"
            app:cornerRadius="10dp" />
...
