...
                app:drawableStartCompat="@drawable/baseline_info_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_horario_text" />

            <Button
                android:id="@+id/reserva_edit_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editar_reserva"
                android:textAlignment="viewStart"
                app:icon="@drawable/round_edit_24" />

            <Button
                android:id="@+id/reserva_delete_button"
                style="@style/DeleteItemButton.Theme.ParkingBGomez"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar_reserva"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorTertiary"
...
